[package]
name = "lqos_rs"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"

[dependencies]

[profile.release]
strip = "debuginfo"
lto = "fat"

[workspace]
members = [
    "lqos_sys", # System support for handling the XDP component
    "lqos_config", # Configuration support
    "lqosd", # LibreQoS Daemon
    "lqos_bus", # Bus data types
    "lqtop", # A command line utility to show current activity
    "xdp_iphash_to_cpu_cmdline", # Rust port of the C xdp_iphash_to_cpu_cmdline tool, for compatibility
    "xdp_pping", # Rust port of cpumap's `xdp_pping` tool, for compatibility
    "lqos_node_manager", # A lightweight web interface for management and local monitoring
    "lqos_python", # Python bindings for using the Rust bus directly
    "lqusers", # CLI control for managing the web user list
    "lqos_utils", # A collection of macros and helpers we find useful
    "lqos_setup", # A quick CLI setup for first-time users
    "lqos_anonymous_stats_server", # The server for gathering anonymous usage data.
    "lqos_heimdall", # Library for managing Heimdall flow watching
    "lqos_map_perf", # A CLI tool for testing eBPF map performance
    "lqstats", # A CLI utility for retrieving long-term statistics
    "long_term_stats/license_server", # Licensing Server for LibreQoS Long-term stats
    "long_term_stats/lts_node", # Long-term stats cluster node (web interface)
    "long_term_stats/lts_ingestor", # Long-term stats data ingestor (feeding databases)
    "long_term_stats/pgdb", # PostgreSQL interface for the LTS system
    "long_term_stats/licman", # A CLI tool for managing the licensing server
    "long_term_stats/lts_client", # Shared data and client-side code for long-term stats
    "long_term_stats/wasm_pipe", # Provides a WebAssembly tight/compressed data pipeline
    "long_term_stats/wasm_pipe_types", # Common types between the WASM conduit and the WASM server
    "lqos_map_perf", # A CLI tool for testing eBPF map performance
    "uisp", # REST support for the UISP API
]
