[package]
name = "lqos_rs"
version = "0.1.0"
edition = "2024"
license = "GPL-2.0-only"

[profile.release]
strip = "debuginfo"
lto = "thin"
incremental = true

[profile.release.build-override]
opt-level = 3
codegen-units = 16

[workspace]
members = [
    "lqos_sys", # System support for handling the XDP component
    "lqos_config", # Configuration support
    "lqosd", # LibreQoS Daemon
    "lqos_bus", # Bus data types
    "lqtop", # A command line utility to show current activity
    "xdp_iphash_to_cpu_cmdline", # Rust port of the C xdp_iphash_to_cpu_cmdline tool, for compatibility
    "xdp_pping", # Rust port of cpumap's `xdp_pping` tool, for compatibility
    "lqos_python", # Python bindings for using the Rust bus directly
    "lqusers", # CLI control for managing the web user list
    "lqos_utils", # A collection of macros and helpers we find useful
    "lqos_setup", # A quick CLI setup for first-time users
    "lqos_heimdall", # Library for managing Heimdall flow watching
    "lqos_map_perf", # A CLI tool for testing eBPF map performance
    "uisp", # REST support for the UISP API
    "uisp_integration", # UISP Integration in Rust
    "lqos_stormguard", # An implementation of CAKE AutoRotate using dynamic bus information. EXPERIMENTAL.
    "lqos_bakery", # The bakery makes CAKEs - controls queue creation.
    "lqos_overrides", # A CLI tool and library for unifying the override system and allowing API support for changing network.json and ShapedDevices.csv
]

[dependencies]

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = [ "full" ] }
log = "0"
tracing = "0.1"
tracing-subscriber = {  version = "0.3", features = ["env-filter"] }
bincode = "1"
once_cell = "1"
nix = {  version = "0", features = ["time", "net"] }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0" # For RFC8949/7409 format C binary objects
serde_json = "1"
csv = "1"
ip_network_table = "0"
ip_network = "0"
sha2 = "0"
uuid = { version = "1", features = ["v4", "fast-rng" ] }
dashmap = "^5.5.3"
toml = "0.8.8"
zerocopy = {version = "0.8.5", features = [ "derive", "zerocopy-derive", "simd" ] }
sysinfo = { version = "0", default-features = false, features = [ "system" ] }
default-net = "0"
reqwest = { version = "0", features = ["json", "blocking"] }
pyo3 = "0.25.1"
colored = "2"
miniz_oxide = "0.8"
byteorder = "1"
num-traits = "0.2.19"
clap = { version = "4", features = ["derive"] }
timerfd = "1.6"
crossbeam-channel = { version = "0.5" }
crossbeam-queue = "0.3.11"
arc-swap = "1.7.1"
parking_lot = "0.12"

# May have to change this one for ARM?
#jemallocator = "0.5"
mimalloc = "0.1.43"

# For memory debugging
allocative = {  version = "0.3.3", features = [ "dashmap" ] }
allocative_derive = "0.3.3"
