[package]
name = "lqos_anonymous_stats_server"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"

[dependencies]
tokio = { version = "1.25.0", features = ["full"] }
anyhow = "1"
env_logger = "0"
log = "0"
lqos_bus = { path = "../lqos_bus" }
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0" # For RFC8949/7409 format C binary objects
sqlite = "0.30.4"
axum = "0.6"
