[package]
name = "lqos_anonymous_stats_server"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"

[dependencies]
tokio = { version = "1.25.0", features = ["full"] }
anyhow = { workspace = true }
env_logger = "0"
log = { workspace = true }
lqos_bus = { path = "../lqos_bus" }
serde = { workspace = true }
serde_cbor = { workspace = true }
sqlite = "0.30.4"
axum = "0.6"
