[package]
name = "lqos_bakery"
version = "0.1.0"
edition = "2024"

[dependencies]
lqos_config = { path = "../lqos_config" }
lqos_bus = { path = "../lqos_bus" }
anyhow.workspace = true
tracing.workspace = true
crossbeam-channel.workspace = true
once_cell.workspace = true
allocative.workspace = true
allocative_derive.workspace = true
parking_lot.workspace = true
