[package]
name = "lqos_bus"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"

[features]
default = ["equinix_tests"]
equinix_tests = []

[dependencies]
serde = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
lqos_config = { path = "../lqos_config" }
lqos_utils = { path = "../lqos_utils" }
lts_client = { path = "../lts_client" }
tokio = { workspace = true }
tracing = { workspace = true }
nix = { workspace = true }
serde_cbor = { workspace = true }

[dev-dependencies]
criterion = { version = "0", features = [ "html_reports", "async_tokio"] }

[[bench]]
name = "socket"
harness = false
