[package]
name = "lqos_bus"
version = "0.1.0"
edition = "2024"
license = "GPL-2.0-only"

[features]
default = ["equinix_tests"]
equinix_tests = []

[dependencies]
serde = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
lqos_config = { path = "../lqos_config" }
lqos_utils = { path = "../lqos_utils" }
lts_client = { path = "../lts_client" }
tokio = { workspace = true }
tracing = { workspace = true }
nix = { workspace = true }
serde_cbor = { workspace = true }

# For memory debugging
allocative = {  version = "0.3.3", features = [ "dashmap" ] }
allocative_derive = "0.3.3"
