[package]
name = "lqos_bus"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"
authors = ["LibreQoE LLC <support@libreqos.io>"]

[features]
default = ["equinix_tests"]
equinix_tests = []

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
lqos_config = { path = "../lqos_config" }
lqos_utils = { path = "../lqos_utils" }
tokio = { workspace = true }
tracing = { workspace = true }
nix = { workspace = true }
serde_cbor = { workspace = true }

# For memory debugging
allocative.workspace = true
allocative_derive.workspace = true
