[package]
name = "lqos_config"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"

[dependencies]
thiserror = "1"
toml_edit = { version = "0", features = [ "serde" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1"
csv = "1"
ip_network_table = "0"
ip_network = "0"
sha2 = "0"
uuid = { version = "1", features = ["v4", "fast-rng" ] }
log = "0"
dashmap = "5"
pyo3 = "0.20"
toml = "0.8.8"
once_cell = "1.19.0"
