[package]
name = "lqos_config"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"

[dependencies]
thiserror = { workspace = true }
toml_edit = { version = "0", features = [ "serde" ] }
serde = { workspace = true }
serde_json = { workspace = true }
csv = { workspace = true }
ip_network_table = {  workspace = true }
ip_network = { workspace = true }
sha2 = {  workspace = true }
uuid = { workspace = true }
log = { workspace = true }
dashmap = {  workspace = true }
pyo3 = {  workspace = true }
toml = {  workspace = true }
lqos_utils = { path = "../lqos_utils" }
