[package]
name = "lqos_config"
version = "0.1.0"
edition = "2024"
license = "GPL-2.0-only"

[dependencies]
thiserror = { workspace = true }
toml_edit = { version = "0", features = [ "serde" ] }
serde = { workspace = true }
serde_json = { workspace = true }
csv = { workspace = true }
ip_network_table = {  workspace = true }
ip_network = { workspace = true }
sha2 = {  workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
toml = {  workspace = true }
lqos_utils = { path = "../lqos_utils" }
arc-swap = { workspace = true }
once_cell = { workspace = true }

# For memory debugging
allocative = {  version = "0.3.3", features = [ "dashmap" ] }
allocative_derive = "0.3.3"