[package]
name = "lqos_heimdall"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"

[dependencies]
lqos_utils = { path = "../lqos_utils" }
lqos_bus = { path = "../lqos_bus" }
lqos_sys = { path = "../lqos_sys" }
lqos_config = { path = "../lqos_config" }
log = { workspace = true }
zerocopy = { workspace = true }
once_cell = { workspace = true}
dashmap = { workspace = true }
anyhow = { workspace = true }
timerfd = { workspace = true }