[package]
name = "lqos_netplan_helper"
version = "0.1.0"
edition = "2024"
license = "GPL-2.0-only"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }
default-net = { workspace = true }
clap = { workspace = true }
lqos_config = { path = "../lqos_config" }
lqos_utils = { path = "../lqos_utils" }
serde_yaml = "0.9"
tracing = { workspace = true }
