[package]
name = "lqos_node_manager"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"

[features]
default = ["equinix_tests"]
equinix_tests = []

[dependencies]
rocket = { version = "0.5.1", features = [ "json", "msgpack", "uuid" ] }
rocket_async_compression = "0.6.0"
lqos_bus = { path = "../lqos_bus" }
lqos_config = { path = "../lqos_config" }
lqos_utils = { path = "../lqos_utils" }
anyhow = "1"
sysinfo = "0"
default-net = "0"
nix = "0"
once_cell = "1"
dns-lookup = "1"
dashmap = "5"
reqwest = { version = "0.11.20", features = ["json"] }
lqos_support_tool = { path = "../lqos_support_tool" }

# Support JemAlloc on supported platforms
[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies]
jemallocator = "0.5"
