[package]
name = "lqos_node_manager"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"

[features]
default = ["equinix_tests"]
equinix_tests = []

[dependencies]
rocket = { version = "0.5.1", features = [ "json", "msgpack", "uuid" ] }
rocket_async_compression = "0.6.0"
lqos_bus = { path = "../lqos_bus" }
lqos_config = { path = "../lqos_config" }
lqos_utils = { path = "../lqos_utils" }
anyhow = { workspace = true }
sysinfo = {  workspace = true }
default-net = {  workspace = true }
nix = { workspace = true }
once_cell = { workspace = true}
dns-lookup = "1"
dashmap = { workspace = true }
reqwest = { workspace = true }
lqos_support_tool = { path = "../lqos_support_tool" }

# Support JemAlloc on supported platforms
[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies]
jemallocator = {  workspace = true }
