[package]
name = "lqos_node_manager2"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {  version = "0.7.5", features = [ "ws" ] }
tokio = { version = "1", features = [ "full", "parking_lot" ] }
log = "0"
tower-http = { version = "0.5.2", features = ["fs"] }
serde_json = "1.0.115"
lqos_bus = { path = "../lqos_bus" }
lqos_config = { path = "../lqos_config" }
serde = { version = "1.0.197", features = ["derive"] }
once_cell = "1.19.0"

