[package]
name = "lqos_overrides"
version = "0.1.0"
edition = "2024"

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
nix.workspace = true
lqos_config = { path = "../lqos_config" }
lqos_bus = { path = "../lqos_bus" }
clap = { workspace = true, features = ["derive"] }
tokio.workspace = true
