[package]
name = "lqos_python"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"

[lib]
name = "lqos_python"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0"
lqos_bus = { path = "../lqos_bus" }
lqos_utils = { path = "../lqos_utils" }
lqos_config = { path = "../lqos_config" }
tokio = { version = "1", features = [ "full" ] }
anyhow = "1"
sysinfo = "0"
nix = "0"
reqwest = { version = "0.11.24", features = ["blocking"] }
serde = { version = "1.0.196", features = ["derive"] }
chrono = "0.4.33"
