[package]
name = "lqos_python"
version = "0.1.0"
edition = "2024"
license = "GPL-2.0-only"

[lib]
name = "lqos_python"
crate-type = ["cdylib"]

[dependencies]
pyo3 = {  workspace = true, features = ["extension-module"] }
lqos_bus = { path = "../lqos_bus" }
lqos_utils = { path = "../lqos_utils" }
lqos_config = { path = "../lqos_config" }
lqos_overrides = { path = "../lqos_overrides" }
tokio = { workspace = true }
anyhow = { workspace = true }
sysinfo = {  workspace = true }
nix = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
chrono = "0.4.33"
serde_cbor = { workspace = true }
base64 = "0.22"
miniz_oxide = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
toml = "0.8"
