[package]
name = "lqos_queue_tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1"
serde = "1"
serde_json = "1"
lqos_bus = { path = "../lqos_bus" }
lqos_config = { path = "../lqos_config" }
lqos_sys = { path = "../lqos_sys" }
lqos_utils = { path = "../lqos_utils" }
log = "0"
log-once = "0.4.0"
tokio = { version = "1", features = [ "full", "parking_lot" ] }
once_cell = "1"

[dev-dependencies]
criterion = { version = "0", features = [ "html_reports"] }

[[bench]]
name = "json"
harness = false
