[package]
name = "lqos_queue_tracker"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
lqos_bus = { path = "../lqos_bus" }
lqos_config = { path = "../lqos_config" }
lqos_sys = { path = "../lqos_sys" }
lqos_utils = { path = "../lqos_utils" }
log = { workspace = true }
log-once = "0.4.0"
tokio = { workspace = true }
once_cell = { workspace = true}
dashmap = { workspace = true }

[dev-dependencies]
criterion = { version = "0", features = [ "html_reports"] }

[[bench]]
name = "json"
harness = false
