[package]
name = "lqos_setup"
version = "0.1.0"
edition = "2024"
license = "GPL-2.0-only"

[dependencies]
#colored = { workspace = true  }
#default-net = { workspace = true }
#lqos_config = { path = "../lqos_config" }
#toml = {  workspace = true }
cursive = "0.21"
nix = { workspace = true, features = [ "net" ] }
