[package]
name = "lqos_setup"
version = "0.1.0"
edition = "2024"
license = "GPL-2.0-only"

[dependencies]
cursive = "0.21.1"
lqos_config = { path = "../lqos_config" }
lqos_netplan_helper = { path = "../lqos_netplan_helper" }
nix.workspace = true
anyhow.workspace = true
once_cell = { workspace = true}
ip_network = { workspace = true }
parking_lot = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
axum = { version = "0.7.7" }
libc = "0.2"
