[package]
name = "lqos_stormguard"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing.workspace = true
anyhow.workspace = true
lqos_config = { path = "../lqos_config" }
timerfd.workspace = true
lqos_bus = { path = "../lqos_bus" }
tokio.workspace = true
lqos_queue_tracker = { path = "../lqos_queue_tracker" }
lqos_utils = { path = "../lqos_utils" }
lqos_bakery = { path = "../lqos_bakery" }
crossbeam-channel.workspace = true
once_cell.workspace = true