[package]
name = "lqos_sys"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"

[dependencies]
nix = {  workspace = true }
libbpf-sys = "1"
anyhow = { workspace = true }
lqos_bus = { path = "../lqos_bus" }
lqos_config = { path = "../lqos_config" }
log = { workspace = true }
lqos_utils = { path = "../lqos_utils" }
once_cell = { workspace = true}
thiserror = { workspace = true }
zerocopy = { workspace = true }

[build-dependencies]
bindgen = "0"
