[package]
name = "lqos_sys"
version = "0.1.0"
edition = "2024"
license = "GPL-2.0-only"

[dependencies]
nix = {  workspace = true }
libbpf-sys = "1"
anyhow = { workspace = true }
lqos_bus = { path = "../lqos_bus" }
lqos_config = { path = "../lqos_config" }
tracing = { workspace = true }
lqos_utils = { path = "../lqos_utils" }
once_cell = { workspace = true}
thiserror = { workspace = true }
zerocopy = { workspace = true }

# For memory debugging
allocative = {  version = "0.3.3", features = [ "dashmap" ] }
allocative_derive = "0.3.3"

[build-dependencies]
bindgen = "0"
