[package]
name = "lqos_topology"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rand = "0.8.5"
surge-ping = "0.8.1"
lqos_config = { path = "../lqos_config" }
lqos_overrides = { path = "../lqos_overrides" }
