[package]
name = "lqos_topology"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
lqos_bus = { path = "../lqos_bus" }
lqos_config = { path = "../lqos_config" }
lqos_overrides = { path = "../lqos_overrides" }
lqos_probe = { path = "../lqos_probe" }
lqos_topology_compile = { path = "../lqos_topology_compile" }
