[package]
name = "lqos_utils"
version = "0.1.0"
edition = "2024"
license = "GPL-2.0-only"

[dependencies]
serde = { workspace = true }
nix = { workspace = true }
tracing = { workspace = true }
notify = { version = "6", features = ["crossbeam-channel"] }
thiserror = { workspace = true }
byteorder = { workspace = true }
zerocopy = { workspace = true }
num-traits = { workspace = true }
crossbeam-channel = { workspace = true }
smallvec = "1"
serde_json.workspace = true

# For memory debugging
allocative.workspace = true
allocative_derive.workspace = true
