[package]
name = "lqosd"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"

[features]
default = ["equinix_tests"]
equinix_tests = []

[dependencies]
anyhow = { workspace = true }
lqos_config = { path = "../lqos_config" }
lqos_sys = { path = "../lqos_sys" }
lqos_queue_tracker = { path = "../lqos_queue_tracker" }
lqos_utils = { path = "../lqos_utils" }
lqos_heimdall = { path = "../lqos_heimdall" }
lts_client = { path = "../lts_client" }
lqos_support_tool = { path = "../lqos_support_tool" }
tokio = { version = "1", features = [ "full", "parking_lot" ] }
once_cell = { workspace = true}
lqos_bus = { path = "../lqos_bus" }
signal-hook = "0.3"
serde_json = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
nix = {  workspace = true }
sysinfo = {  workspace = true }
dashmap = { workspace = true }
itertools = "0.12.1"
csv = { workspace = true }
reqwest = { workspace = true }
flate2 = "1.0"
bincode = { workspace = true }
ip_network_table = {  workspace = true }
ip_network = { workspace = true }
zerocopy = { workspace = true }
fxhash = "0.2.1"
axum = { version = "0.7.5", features = ["ws", "http2"] }
axum-extra = {  version = "0.9.3", features = ["cookie", "cookie-private"] }
tower-http = { version = "0.5.2", features = ["fs", "cors"] }
strum = {  version = "0.26.3", features = ["derive"] }
default-net = {  workspace = true }
surge-ping = "0.8.1"
rand = "0.8.5"
mime_guess = "2.0.4"
timerfd = {  workspace = true }
crossbeam-channel = { workspace = true }

# Support JemAlloc on supported platforms
[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies]
jemallocator = {  workspace = true }
