[package]
name = "lqosd"
version = "0.1.0"
edition = "2024"
license = "GPL-2.0-only"

[features]
default = ["equinix_tests"]
equinix_tests = []
flamegraphs = []

[dependencies]
anyhow = { workspace = true }
lqos_config = { path = "../lqos_config" }
lqos_network_devices = { path = "../lqos_network_devices" }
lqos_sys = { path = "../lqos_sys" }
lqos_queue_tracker = { path = "../lqos_queue_tracker" }
lqos_utils = { path = "../lqos_utils" }
lqos_overrides = { path = "../lqos_overrides" }
lqos_topology = { path = "../lqos_topology" }
lqos_topology_compile = { path = "../lqos_topology_compile" }
lqos_heimdall = { path = "../lqos_heimdall" }
lqos_stormguard = { path = "../lqos_stormguard" }
lqos_probe = { path = "../lqos_probe" }
lqos_netplan_helper = { path = "../lqos_netplan_helper" }
tokio = { version = "1", features = [ "full" ] }
once_cell = { workspace = true}
lqos_bus = { path = "../lqos_bus" }
lqos_bakery = { path = "../lqos_bakery" }
signal-hook = "0.3"
serde_json = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
nix = {  workspace = true }
sysinfo = {  workspace = true }
itertools = "0.13.0"
reqwest = { workspace = true }
hmac = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
flate2 = "1"
bincode = { workspace = true }
ip_network_table = {  workspace = true }
ip_network = { workspace = true }
zerocopy = { workspace = true }
fxhash = "0.2.1"
axum = { version = "0.7.7", features = ["ws"] }
axum-extra = {  version = "0.9.4", features = ["cookie", "cookie-private"] }
tower-http = { version = "0.6.1", features = ["fs", "cors"] }
strum = {  version = "0.26.3", features = ["derive"] }
default-net = {  workspace = true }
rand = "0.8.5"
serde_cbor = { workspace = true }
timerfd = {  workspace = true }
crossbeam-channel = { workspace = true }
arc-swap = {  workspace = true }
crossbeam-queue = { workspace = true }
sha256 = "1.5.0"
uuid = { version = "1.10.0", features = ["v4", "fast-rng", "serde"] }
dryoc = {  version ="0.6.0", features = ["serde"] }
miniz_oxide = "0.8.0"
thiserror = { workspace = true }
tungstenite = { version = "0.24", features = [ "native-tls" ] } # For WebSockets
tokio-tungstenite = { version = "0.24", features = [ "native-tls" ] }
native-tls = "0.2"
ureq = { version = "2.12.1", features = ["json", "native-tls"] }
csv = { workspace = true }
parking_lot = { workspace = true }
smallvec = "1"
png = "0.17.16"

# For memory debugging
allocative.workspace = true
allocative_derive.workspace = true

# Support JemAlloc on supported platforms
#[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies]
#jemallocator = {  workspace = true }
futures-util = "0.3.31"
