[package]
name = "lqtop"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"

[dependencies]
tokio = { version = "1", features = [ "full" ] }
lqos_bus = { path = "../lqos_bus" }
lqos_utils = { path = "../lqos_utils" }
anyhow = "1"
ratatui = "0.26.1"
crossterm = "0.27.0"
ctrlc = "3.4.4"
sysinfo = "0"
once_cell = "1.19.0"
