[package]
name = "lqtop"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"

[dependencies]
tokio = { workspace = true }
lqos_bus = { path = "../lqos_bus" }
lqos_utils = { path = "../lqos_utils" }
anyhow = { workspace = true }
ratatui = "0.26.1"
crossterm = "0.27.0"
ctrlc = "3.4.4"
sysinfo = {  workspace = true }
once_cell = { workspace = true}
