[package]
name = "lqtop"
version = "0.1.0"
edition = "2024"
license = "GPL-2.0-only"

[dependencies]
tokio = { workspace = true }
lqos_bus = { path = "../lqos_bus" }
lqos_utils = { path = "../lqos_utils" }
anyhow = { workspace = true }
ratatui = { version = "0.30.0", default-features = false, features = ["crossterm"] }
crossterm = "0.29.0"
ctrlc = "3.4.4"
sysinfo = {  workspace = true }
once_cell = { workspace = true}
