[package]
name = "lts_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lqos_config = { path = "../lqos_config" }
lqos_utils = { path = "../lqos_utils" }
uisp = { path = "../uisp" }
dryoc = { version = "0.5", features = ["serde"] }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
serde_cbor = { workspace = true }
log = { workspace = true }
bincode = { workspace = true }
once_cell = { workspace = true}
sysinfo = {  workspace = true }
num-traits = { workspace = true }
miniz_oxide = { workspace = true }
dashmap = { workspace = true }
serde_json = { workspace = true }