[package]
name = "uisp"
version = "0.1.0"
edition = "2024"

[dependencies]
lqos_config = { path = "../lqos_config" }
lqos_utils = { path = "../lqos_utils" }
serde = { workspace = true }
serde_json.workspace = true
reqwest = { workspace = true }
anyhow = { workspace = true }
# For memory debugging
allocative.workspace = true
