[package]
name = "uisp_integration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
reqwest = { version = "0.12.3", features = ["json"] }
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
lqos_config = { path = "../lqos_config" }
uisp = { path = "../uisp" }
thiserror = "1.0.58"
serde = { version = "1.0.198", features = ["derive"] }
csv = "1.3.0"
serde_json = "1.0.116"
ip_network_table = "0"
ip_network = "0"
pyo3 = "0.20"
