[package]
name = "uisp_integration"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
lqos_config = { path = "../lqos_config" }
uisp = { path = "../uisp" }
thiserror = { workspace = true }
serde = { workspace = true }
csv = { workspace = true }
serde_json = { workspace = true }
ip_network_table = {  workspace = true }
ip_network = { workspace = true }
serde_cbor = { workspace = true }
lqos_bus = { path = "../lqos_bus" }
petgraph = {  version = "0.7.1", features = ["serde-1"] }
lqos_overrides = { path = "../lqos_overrides" }
