[package]
name = "xdp_iphash_to_cpu_cmdline"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-only"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = [ "full" ] }
anyhow = "1"
lqos_bus = { path = "../lqos_bus" }
lqos_utils = { path = "../lqos_utils" }
