[package]
name = "license_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.25.0", features = ["full"] }
anyhow = "1"
env_logger = "0"
log = "0"
serde_cbor = "0" # For RFC8949/7409 format C binary objects
serde = { version = "1.0", features = ["derive"] }
lqos_bus = { path = "../../lqos_bus" }
pgdb = { path = "../pgdb" }
dryoc = { version = "0.5", features = ["serde"] }
once_cell = "1"